# ptex-gpu-comparison

./: .gitignore  .gitmodules  README.md
comparison/: README.md  compare.py  renamerenders.sh  runcomparisons.sh
cpu-renderer/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Renderer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cpu-renderer/renderer/: main.cpp
cpu-renderer/renderer/core/: darray.h  mesh.cpp
cpu-renderer/renderer/scenes/: scene_helper.cpp
cpu-renderer/renderer/shaders/: cache_helper.cpp
cpu-renderer/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cpu-renderer/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
gpu-renderer/: CMakeLists.txt  CMakeSettings.json
gpu-renderer/assets/: imgui.ini  text_faceID.img  viewpoints.vp
gpu-renderer/assets/models/ground_plane/: ground_plane.ptx
gpu-renderer/assets/models/mud_sphere/: mud_sphere.ptx
gpu-renderer/assets/models/robot/: Quandtum_BA-2_v1_1.blend  Quandtum_BA-2_v1_1.blend1  robot_2.adj
gpu-renderer/assets/models/sphere/: sphere.ptx  sphere_sorted.ptx  sphere_sorted_line.ptx  sphere_sorted_simple.ptx
gpu-renderer/assets/shaders/: default.frag  default.vert  fullscreen.frag  fullscreen.vert  output.frag  ptex.frag  ptex.vert  ptex_hybrid.frag  ptex_intel.frag  ptex_nvidia.frag  ptex_output.frag  ptex_reduced_traverse.frag  test.vert
gpu-renderer/assets/textures/: uv_space.afphoto
gpu-renderer/lib/glad/include/glad/: glad.h
gpu-renderer/lib/glad/src/: glad.c
gpu-renderer/src/: array.hh  cpu_renderer.cxx  cpu_renderer.hh  gl_utils.cxx  gl_utils.hh  img.cxx  img.hh  main.cxx  maths.cxx  maths.hh  mesh.cxx  mesh.hh  mesh_loading.cxx  mesh_loading.hh  platform.cxx  platform.hh  profiler.cxx  profiler.hh  ptex_utils.cxx  ptex_utils.hh  util.cxx  util.hh
gpu-renderer/src/converter/: converter.cxx
gpu-renderer/src/methods/: CpuMethod.cxx  HybridMethod.cxx  IntelMethod.cxx  Methods.cxx  Methods.hh  NvidiaMethod.cxx  ReducedTraverseMethod.cxx
image-comparer/: CMakeLists.txt
image-comparer/src/: main.c
produced images/: cpu-test (2).txt
ptex-main/: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl
ptex-main/src/doc/ptex/: PtexCache_8cpp.html  PtexCache_8cpp_source.html  PtexCache_8h.html  PtexCache_8h_source.html  PtexExports_8h.html  PtexExports_8h_source.html  PtexFilters_8cpp.html  PtexFilters_8cpp_source.html  PtexHalfTableGen_8cpp.html  PtexHalfTableGen_8cpp_source.html  PtexHalfTables_8h.html  PtexHalfTables_8h_source.html  PtexHalf_8cpp.html  PtexHalf_8cpp_source.html  PtexHalf_8h.html  PtexHalf_8h_source.html  PtexHashMap_8h.html  PtexHashMap_8h_source.html  PtexIO_8h.html  PtexIO_8h_source.html  PtexInt_8h.html  PtexInt_8h_source.html  PtexMutex_8h.html  PtexMutex_8h_source.html  PtexPlatform_8h.html  PtexPlatform_8h_source.html  PtexReader_8cpp.html  PtexReader_8cpp_source.html  PtexReader_8h.html  PtexReader_8h_source.html  PtexSeparableFilter_8cpp.html  PtexSeparableFilter_8cpp_source.html  PtexSeparableFilter_8h.html  PtexSeparableFilter_8h_source.html  PtexSeparableKernel_8cpp.html  PtexSeparableKernel_8cpp_source.html  PtexSeparableKernel_8h.html  PtexSeparableKernel_8h_source.html  PtexTriangleFilter_8cpp.html  PtexTriangleFilter_8cpp_source.html  (+279 more)
